NEW\ Structurized code, send email only when there is available date for other than today, gitigone added, .env file added

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Authentication credentials for login and authorization
-USER_LAST_NAME=sample_last_name
-USER_LICENSE_NUMBER=sample_license_number
-USER_KEYWORD=sample_keyword
+USER_LAST_NAME=<LAST_NAME>
+USER_LICENSE_NUMBER=<LICENCE_NUMBER>
+USER_KEYWORD=<KEYWORD>
 
 # Gmail API configuration
-SENDER_EMAIL=your_email@gmail.com
-TO_EMAIL=recipient_email@example.com
+SENDER_EMAIL=<SAMPLE@gmail.com>
+TO_EMAIL=<SAMPLE@gmail.com>
 GMAIL_SCOPES=https://mail.google.com/
 
 # File paths for tokens and credentials
