UP\lambda token handling using s3 added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+env=lambda
+
 # Authentication credentials for login and authorization
 USER_LAST_NAME=<LAST_NAME>
 USER_LICENSE_NUMBER=<LICENCE_NUMBER>
@@ -17,3 +19,8 @@ CHECK_AVAILABILITY_INTERVAL=15  # Check for availability within this many days
 
 # Google API User ID (generally 'me' for the authorized user)
 GMAIL_USER_ID=me
+
+# AWS lambda env vars
+TOKEN_BUCKET=icbc-road-test-notifier-auth-bucket
+TOKEN_KEY=token.json
+CREDENTIALS_KEY=credentials.json
