UP\env name changed to ENVIRONMENT

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-env=lambda
+ENVIRONMENT=lambda
 
 # Authentication credentials for login and authorization
 USER_LAST_NAME=<LAST_NAME>
@@ -8,7 +8,7 @@ USER_KEYWORD=<KEYWORD>
 # Gmail API configuration
 SENDER_EMAIL=<SAMPLE@gmail.com>
 TO_EMAIL=<SAMPLE@gmail.com>
-GMAIL_SCOPES=https://mail.google.com/
+GMAIL_SCOPES=https://www.googleapis.com/auth/gmail.send
 
 # File paths for tokens and credentials
 TOKEN_PATH=token.json
