UP\changed the code to support app_password instead of oauth so it have lifelong access to gmail

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,6 @@ debug.log
 # email credentials
 credentials.json
 token.json
-
+service_account.json
 # deployment package folder
 .icbc-lambda-package/
