--- a/.env.example
+++ b/.env.example
@@ -10,17 +10,11 @@ SENDER_EMAIL=<SAMPLE@gmail.com>
 TO_EMAIL=<SAMPLE@gmail.com>
 GMAIL_SCOPES=https://www.googleapis.com/auth/gmail.send
 
-# File paths for tokens and credentials
-TOKEN_PATH=token.json
-CREDENTIALS_PATH=credentials.json
+# Google Account credentials
+APP_PASSWORD=
 
 # Script configuration
 CHECK_AVAILABILITY_INTERVAL=15  # Check for availability within this many days
 
 # Google API User ID (generally 'me' for the authorized user)
 GMAIL_USER_ID=me
-
-# AWS lambda env vars
-TOKEN_BUCKET=icbc-road-test-notifier-auth-bucket
-TOKEN_KEY=token.json
-CREDENTIALS_KEY=credentials.json
