--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,194 @@
-# Byte-compiled files
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+frontend/node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+../.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
-# Django specific files
-db.sqlite3
-*.log
-.env
-*.pot
-*.pyc
-media/
-staticfiles/
+# C extensions
+*.so
 
-# Environment and IDE settings
-.venv/
-.vscode/
+# Dependency directories
+web/node_modules
+web/.pnp
+.pnp.js
+web/package-lock.json
+
+# Testing
+/coverage
+/*/coverage
+
+# Editors
 .idea/
-*.sublime-project
-*.sublime-workspace
 
-# OS-specific files
-.DS_Store
-Thumbs.db
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Virtual environment
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Interrogate
+api/interrogate_badge.svg
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+.idea
+data
+
+# Yarn stuff
+web/.yarn/*
+!web/.yarn/cache
+!web/.yarn/patches
+!web/.yarn/plugins
+!web/.yarn/releases
+!web/.yarn/sdks
+!web/.yarn/versions
+!web/.yarn/**/lib/
+
+# Asdf package manager
+/*/.tool-versions
+
+
+
+# Environments
+.env
+.venv
+/*/.venv
 env/
 venv/
 ENV/
-.venv/
-Pipfile
-Pipfile.lock
+env.bak/
+venv.bak/
+/dist
+
 
 # Cache and temporary files
-*.mo
 *.swp
 *.bak
 *.tmp
@@ -42,15 +198,6 @@ Pipfile.lock
 *.sass-cache
 .npm/
 yarn.lock
-
-# Test coverage and reports
-.coverage
-.tox/
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
 # Deployment files
 *.crt
 *.pem
