NEW/ Lead model, schema, crud, and endpoint added. User prefrences model, schema, crud,  and endpoint added
integrating email service and backend started, tests for user preference endpoint and crud added, user models id changed to uuid

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "==0.104.1"
+fastapi = "*"
 uvicorn = "==0.24.0"
 sqlalchemy = "==2.0.23"
 psycopg2-binary = "==2.9.9"
@@ -17,6 +17,9 @@ bcrypt = "==4.0.1"
 pydantic = "==2.5.2"
 pydantic-settings = "==2.1.0"
 alembic = "*"
+pytest = "*"
+httpx = "*"
+starlette = "*"
 
 [dev-packages]
 
