NEW/ email service refactored and added as saprerated crawlers and services + tests
1. availabilty crawler refactored and added 2. email service cleaned, refactored and downsized 3. centeral notifier added as connection between availabilty finder, email service, and matching preferences with slots 4. crud_center refactored 5. used calendar day instead of dayOfWeek 6. added serializer for availability comming from crawler 7. test for notifier added. 8. icbc_centers_cralwer tested

--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+.ipynb
 
 # IPython
 profile_default/
@@ -213,3 +214,8 @@ token.json
 service_account.json
 # deployment package folder
 icbc-lambda-package/
+notebooks/
+
+# cursor
+.specstory
+.cursorindexingignore
