NEW/setup scripts added. Dockerized. New migrations.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,9 @@ ENVIRONMENT=local
 ACCESS_TOKEN_EXPIRE_MINUTES= 1512000 # 90 days
 ALGORITHM=HS256
 DATABASE_URL=
+DATABASE_NAME=icbc
+DATABASE_USER=
+DATABASE_PASSWORD=
 TEST_DATABASE_URL=
 PROJECT_NAME=ICBC Road Test Notifier
 SECRET_KEY=
