--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = override_in_env.py
+# sqlalchemy.url = override_in_env.py
 
 
 [post_write_hooks]
