--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,17 +1,36 @@
-version: '3.8'
-
+version: "3.9"
 services:
-  db:
-    image: postgres:13-alpine
-    container_name: test_postgres_db
+  postgres:
+    image: postgres:16
+    env_file: [ .env ]
     environment:
-      POSTGRES_USER: test_user
-      POSTGRES_PASSWORD: test_password
-      POSTGRES_DB: test_db
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+    volumes: [ "pgdata:/var/lib/postgresql/data" ]
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U test_user" ]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER} -d ${DATABASE_NAME}"]
+      interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
+    ports: [ "5432:5432" ]
+
+  api:
+    build: .
+    env_file: [ .env ]
+    command: >
+      bash -lc "
+      ./scripts/wait-for-db.sh &&
+      pipenv run alembic upgrade head &&
+      pipenv run uvicorn app.main:app --host 0.0.0.0 --port ${APP_PORT:-8000} --reload
+      "
+    volumes: 
+      - ".:/code"
+      - "/code/.venv"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports: [ "${APP_PORT:-8000}:8000" ]
+
+volumes:
+  pgdata:
